Updating a number of things in betelguese and brainbow.

--- a/Brainbow/brainbow.css
+++ b/Brainbow/brainbow.css
@@ -194,6 +194,9 @@ ul.Breadcrumbs>li:last-child>a>span.Text {
 .CardSection {
 	background-color: #383A32 !important;
 }
+.GuruSection {
+	color: #BDAE9D !important;
+}
 .GuruCard {
 	border: 1px solid black;
 	background: none !important;
@@ -224,3 +227,4 @@ ul.Breadcrumbs>li:last-child>a>span.Text {
 	background-color: #545443 !important;
 	border: none !important;
 }
+
