--- a/Betelguese/betelguese.css
+++ b/Betelguese/betelguese.css
@@ -59,7 +59,8 @@ body,
 
 
 /* Other links */
-.userinfo a {
+.userinfo a,
+a.medal+a {
 	color: #007A60 !important;
 }
 
@@ -105,10 +106,11 @@ a.page,
 .this_page,
 .next>a,
 .page>a,
-.curr {
+.curr,
+.medal {
 	background-color: #1F1A18 !important;
 	border: 1px solid black !important;
-	color: #BDAE9D;
+	color: #BDAE9D !important;
 }
 .tags a:hover,
 .tabsA a:hover,
@@ -143,7 +145,10 @@ span.page {
 #listA {
 	background-color: #2A211C !important;
 }
-.votes, .views, .answered, .unanswered {
+.votes, 
+.views, 
+.answered, 
+.unanswered {
 	background-color: #1B1009;
 	color: #BDAE9D !important;
 	border: 1px solid black !important;
